# napajs

./: .clang-format  .clang-tidy  .gitignore  .npmignore  .travis.yml  CMakeLists.txt  GUIDELINES.md  LICENSE.txt  README.md  a.js  appveyor.yml  build.bat  build.js  dirs.proj  format-code.js  package.json  test.js  test_m.js
docs/: index.md
examples/modules/async-number/: .gitignore  CMakeLists.txt  README.md  binding.gyp  dirs.proj  package.json
examples/modules/async-number/lib/: async-number.ts  tsconfig.json
examples/modules/async-number/napa/: CMakeLists.txt  addon.cpp  addon.vcxproj
examples/modules/async-number/node/: CMakeLists.txt  addon.cpp  addon.vcxproj
examples/modules/async-number/script/: package.json  script.proj
examples/modules/async-number/src/: addon.cpp
examples/modules/async-number/test/: async-number-test.njsproj  test.ts  tsconfig.json
examples/modules/hello-world/napa/: CMakeLists.txt  addon.cpp  addon.vcxproj
examples/modules/plus-number/: .gitignore  .npmignore  CMakeLists.txt  README.md  dirs.proj  package.json
examples/modules/plus-number/inc/: plus-number.h
examples/modules/plus-number/lib/: plus-number.ts
examples/tutorial/estimate-pi-with-embeded-napa/: CMakeLists.txt  README.md  estimate-PI.js  main.cpp
examples/tutorial/napa-runner/: CMakeLists.txt  README.md  main.cpp  package.json
node/: CMakeLists.txt  addon.cpp  addon.vcxproj  node-zone-delegates.cpp  node-zone-delegates.h
src/: CMakeLists.txt  api.cpp  container.cpp  container.h  napa.vcxproj  runtime.cpp  settings.cpp  settings.h
src/api/: .clang-tidy  api.cpp  capi.cpp  string-ref.cpp
src/memory/: built-in-allocators.cpp  store-impl.cpp  store.cpp  store.h
src/module/: async-runner.cpp  binary-module-loader.cpp  binary-module-loader.h  core-module-loader.cpp  core-module-loader.h  core-modules.json  global-store.cpp  global-store.h  javascript-module-loader.cpp  javascript-module-loader.h  json-module-loader.cpp  module-cache.cpp  module-cache.h  module-file-loader.h  module-internal.cpp  module-loader-helpers.cpp  module-loader-helpers.h  module-loader.cpp  module-loader.h  module-resolver.cpp  module-resolver.h  module.cpp  worker-context.cpp
src/module/built-in/: built-in-modules.h  built-in-modules.proj  console.cpp  console.h  process.cpp  process.h
src/module/core/: core-modules.h  core-modules.proj  file-system-helpers.cpp  file-system-helpers.h  file-system.cpp  file-system.h
src/module/core-modules/: console.cpp  console.h  core-modules.h  core-modules.proj  file-system-helpers.cpp  file-system-helpers.h  file-system.cpp  napa-binding.cpp  napa-binding.h  os.cpp  path.cpp  path.h  process.cpp  process.h  tty-wrap.cpp  tty-wrap.h
src/module/loader/: binary-module-loader.cpp  binary-module-loader.h  core-module-loader.cpp  core-module-loader.h  javascript-module-loader.cpp  javascript-module-loader.h  json-module-loader.cpp  json-module-loader.h  module-cache.cpp  module-cache.h  module-file-loader.h  module-loader-helpers.cpp  module-loader-helpers.h  module-loader.cpp  module-loader.h  module-resolver-cache.cpp  module-resolver-cache.h  module-resolver.cpp  module-resolver.h
src/napa/: container.h  napa.vcxproj  runtime.cpp
src/node/: node-zone-delegates.cpp  node-zone-delegates.h
src/platform/: dll.cpp  dll.h  filesystem.cpp  filesystem.h  os.cpp  os.h  platform.h  process.cpp  process.h  thread-local-storage.h  thread-local.h
src/platform/posix/: dll-impl.h
src/platform/win/: command-line.cpp  dll-impl.h  platform.cpp  thread-local-storage.cpp
src/providers/: console-logging-provider.h  nop-logging-provider.h  nop-metric-provider.h  providers.cpp  providers.h
src/scheduler/: async-complete-task.cpp  async-complete-task.h  async-context.h  broadcast-task.cpp  broadcast-task.h  core.cpp  core.h  execute-task.cpp  execute-task.h  load-task.cpp  load-task.h  run-task.cpp  run-task.h  scheduler.h  simple-thread-pool.cpp  simple-thread-pool.h  task-decorators.cpp  task-decorators.h  task.h  terminable-task.cpp  terminable-task.h  timeout-service.cpp  timeout-service.h  worker.cpp  worker.h
src/settings/: settings-parser.cpp  settings-parser.h  settings.h
src/store/: store.cpp  store.h
src/transport/: deserializer.h  externalized-contents.h  serialized-data.h  serializer.h  transport-utils.h
src/utils/: debug.h  string-ref.cpp  string.h
src/v8/: CMakeLists.txt  array-buffer-allocator.cc  array-buffer-allocator.h  deserializer.cc  deserializer.h  externalized-contents.cc  externalized-contents.h  serialized-data.cc  serialized-data.h  serializer.cc  serializer.h  v8-common.cpp  v8-common.h  v8-extensions.cc  v8-extensions.h  v8-transport-helper.h
src/v8-extensions/: CMakeLists.txt  array-buffer-allocator.cc  array-buffer-allocator.h  deserializer.cpp  deserializer.h  externalized-contents.cc  externalized-contents.cpp  externalized-contents.h  serialized-data.cc  serialized-data.cpp  serializer.cc  serializer.cpp  serializer.h  v8-extensions-macros.h  v8-extensions.cpp  v8-extensions.h
src/zone/: async-complete-task.cpp  async-complete-task.h  async-context.h  async-runner.cc  async-runner.cpp  call-context.cpp  call-context.h  call-task.cpp  call-task.h  callback-task.cpp  callback-task.h  eval-task.cpp  eval-task.h  napa-zone.cpp  napa-zone.h  node-zone.cpp  node-zone.h  schedule-phase.h  scheduler.cpp  scheduler.h  simple-thread-pool.cpp  simple-thread-pool.h  task-decorators.h  task.h  terminable-task.cpp  terminable-task.h  timeout-service.cpp  timeout-service.h  timer.cpp  timer.h  worker-context.cpp  worker-context.h  worker.cpp  worker.h  zone-impl.cpp  zone-impl.h  zone.h
test/module/addon/: CMakeLists.txt  addon.cpp  simple-object-wrap.cpp  simple-object-wrap.h
unittest/: CMakeLists.txt  main.cpp  run.js
unittest/module/: file-system-helpers-tests.cpp  module-resolver-cache-tests.cpp  module-resolver-tests.cpp
unittest/platform/: filesystem-tests.cpp
unittest/settings/: parser-tests.cpp
unittest/utils/: string-ref-tests.cpp  string-tests.cpp
unittest/zone/: scheduler-tests.cpp  timer-tests.cpp
(+686 files in other folders)
